Added README.rst for long description.

--- a/output.html
+++ b/output.html
@@ -363,21 +363,19 @@ ul.auto-toc {
 <div class="document">
 
 
-<h1>Redvelvet</h1>
-<h2>A fun and friendly implementation of some interesting data types. The data types provided by the package are the following:</h2>
-<li>Graph</li>
-<li>MinHeap </li>
-<li>MaxHeap</li>
-<li>Trie</li>
-<h2>Installation</h2>
+<p>Redvelvet</p>
+<p>A fun and friendly implementation of some interesting data types. The data types provided by the package are the following:</p>
+<p>Graph</p>
+<p>MinHeap</p>
+<p>MaxHeap</p>
+<p>Trie</p>
+<p>Installation</p>
 <p>This package can be installed using the Python pip package manager that has been configured to use the Oath/Yahoo
 internal package repository.</p>
 <p>In order to install this package the python environment must have:</p>
-<ul class="simple">
-<li>pip version 8.1.1 or higher</li>
-<li>setuptools 31.0.0 or higher</li>
-</ul>
-<h2>Usage</h2>
+<p>pip version 8.1.1 or higher</p>
+<p>setuptools 31.0.0 or higher</p>
+<p>Usage</p>
 </div>
 </body>
 </html>
